--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie-edge">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -95,7 +99,11 @@
            </div>
         </div>
     </footer>
-
+    <script>
+            node_modules/jQuery/dist/jquery.slim.js
+            node_modules/popper.js/dist/umd/popper.min.js
+            node_modules/bootstrap/dist/js/bootstrap.min.js
+    </script>
 </body>
 
 </html>
