Added Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,10 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+            <a class="navbar-brand mr-auto" href="#">
+                <img src="img/logo.png" height="30" width="41">
+           </a>
+
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -32,8 +35,7 @@
                         <a class="nav-link" href="#"> <span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactus.html"> <span class="fa fa-address-card fa-lg"></span>
-                            Contact</a>
+                        <a class="nav-link" href="./contactus.html"> <span class="fa fa-address-card fa-lg"></span> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,8 +50,10 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
+
             </div>
         </div>
     </header>
